# boardgame

./: .gitattributes  .gitignore  Cargo.toml  README.md  roster.ron  ui-scene.txt
.claude/: CLAUDE.md  settings.json
.claude/commands/: spec-sync.md  worktree-sync.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  deploy.yml  pipeline.yml
combat-reports/: breach.md  index.md  matchups.md  roster.md
combat-reports/duels/: Aegis-vs-Cleaver.md  Aegis-vs-Gnat.md  Aegis-vs-Hail.md  Aegis-vs-Lance.md  Aegis-vs-Maul.md  (+167 more)
crates/boardgame/: Cargo.toml  build.rs  index.html
crates/boardgame/examples/: fight.rs  region_board.rs
crates/boardgame/src/: main.rs  persistence.rs
crates/boardgame/tests/: card_text_fits.rs
crates/cardtable/: Cargo.toml
crates/cardtable-combat/: Cargo.toml
crates/cardtable-combat/src/: lib.rs
crates/cardtable-model/: Cargo.toml
crates/cardtable-model/src/: binding.rs  catalog.rs  fixtures.rs  lib.rs  model.rs  scene.rs  seam.rs
crates/cardtable-model/src/model/: geometry.rs  layout.rs  physical.rs  ui.rs
crates/cardtable/examples/: card_gallery.rs  fontshow.rs  sandbox.rs
crates/cardtable/examples/fonts/: README.md
crates/cardtable/src/: board_driver.rs  demo.rs  gallery.rs  lib.rs  logging.rs  palette.rs
crates/cardtable/tests/: ascii_code.rs  text_audit_detects_overflow.rs
crates/characterization/: .gitattributes  Cargo.toml
crates/characterization/golden/: auto_executioner_cinderwatch_seed1.behavior.txt  auto_executioner_cinderwatch_seed1.ron  auto_marksman_cinderwatch_seed1.behavior.txt  auto_marksman_cinderwatch_seed7.behavior.txt  auto_marksman_cinderwatch_seed7.ron  emitter_world.behavior.txt  interaction_transcript.behavior.txt  interaction_transcript.ron  manual_marksman_cinderwatch_seed7.behavior.txt  manual_marksman_cinderwatch_seed7.ron  sample_table.behavior.txt  sample_table.ron
crates/characterization/src/: lib.rs
crates/characterization/tests/: golden.rs
crates/combat-lab/: Cargo.toml
crates/combat-lab/src/: detect.rs  lib.rs  report.rs  resolver.rs
crates/deckbound/: Cargo.toml
crates/deckbound-balance/: Cargo.toml
crates/deckbound-balance/data/balance/: duel-locks.ron
crates/deckbound-balance/examples/: balance.rs  classes.rs
crates/deckbound-balance/src/: lib.rs
crates/deckbound-board/: Cargo.toml
crates/deckbound-board/examples/: explore.rs  regions_diagonal.rs  regions_tune_corners.rs  steps_diagonal.rs  targets.rs  v2_balance.rs  v2_corner_tune.rs  v2_corners.rs  v2_diagonal_search.rs  v2_doom_cost.rs  v2_encounters.rs  v2_regions.rs  v2_regions_diagonal.rs  v2_remarshal.rs
crates/deckbound-board/src/: arena.rs  battle.rs  board_game.rs  combat.rs  fixtures.rs  lib.rs  regions.rs  scene.rs  solver.rs  targets.rs  units.rs  verify.rs
crates/deckbound-board/tests/: diagonal.rs
crates/deckbound-cardtable/: Cargo.toml
crates/deckbound-cardtable/examples/: v2_aoe_horde.rs  v2_armor_niche.rs  v2_balance.rs  v2_corner_tune.rs  v2_corners.rs  v2_diagonal_search.rs  v2_encounters.rs  v2_no_new_mechanics.rs  v2_range_vs_melee.rs  v2_ranged_niche.rs
crates/deckbound-cardtable/src/: arena.rs  battle.rs  board_game.rs  catalog.rs  combat.rs  fixtures.rs  lib.rs  solver.rs
crates/deckbound-content/: Cargo.toml
crates/deckbound-content/src/: catalog.rs  lib.rs  rank.rs  schedule.rs
crates/deckbound-sample/: Cargo.toml  index.html
crates/deckbound-sample/src/: main.rs
crates/deckbound/data/: booklet.ron
crates/deckbound/data/balance/: bestiary-corners.ron  generic-classes.ron  level-1.ron  region-locks.ron
crates/deckbound/examples/: balance.rs  classes.rs  discover.rs  handbook.rs  reference_run.rs  sim.rs  transcript.rs
crates/deckbound/src/: actor.rs  actors.rs  balance.rs  campaign.rs  cards.rs  catalog.rs  combat.rs  combinatorics.rs  currency.rs  decktree.rs  duel.rs  encounter.rs  engagement.rs  form.rs  game.rs  groups.rs  handbook.rs  layout.rs  lib.rs  policy.rs  read.rs  reference.rs  resolve.rs  rules.rs  ruleset.rs  scenarios.rs  solver.rs  state.rs  stats.rs  sub_phase.rs  transcript.rs  world.rs  zones.rs
crates/deckbound/src/snapshots/: rules-tour.1.txt
crates/engine/: Cargo.toml
crates/engine/examples/: pad_tables.rs
crates/engine/src/: game.rs  lib.rs  markdown.rs  rng.rs  view.rs  zone.rs
crates/gatcg/: Cargo.toml
crates/gatcg/examples/: download_library.rs  download_rules.rs
crates/gatcg/src/: lib.rs
crates/rules/: Cargo.toml
crates/rules/examples/: explore.rs
crates/rules/src/: core.rs  lib.rs
crates/rules/src/combat/: game.rs  mod.rs  narrate.rs  regions.rs  resolve.rs  step_game.rs  steps.rs
crates/tabletop/: Cargo.toml
crates/tabletop/src/: lib.rs
docs/: README.md
log-driven/: README.md
needs-merge/: arena-modal-code-debt.md  arena-step-port-plan.md  automated-balance-testing-roadmap.md  automated-optimal-battle-play.md  bestiary-verification.md  bone-currency-flavor.md  card-design-audit.md  cardtable-deckbound-reunification-plan.md  combat-engine-observability-refactor.md  combat-rules-current.md  controller-card-set.md  crossing-bid-tree.md  encounter-suite-design.md  engine-migration-to-engagement-model.md  fray-attrition-contest-spec.md  gear-identity-fold-in.md  gear-weapon-armor-mechanics.md  intended-player-experience.md  lock-exclusivity-finding.md  manual-combat-design-brief.md  perfect-solver-plan.md  power-catalog-rewrite.md  powers-redesign-form-abilities.md  regions-and-relations-combat.md  regions-engagement-by-geometry.md  role-necessity-findings.md  role-weight-balance-testing.md  role-weight-harness-built.md  round-sequence.md  screen-description-file-plan.md  stat-depth-audit.md  stat-redesign-direction.md  strategy-primitive-suite.md  variety-as-a-balance-objective.md
scripts/: README.md  build.ps1  build.sh  card-gallery.ps1  card-gallery.sh  check.ps1  check.sh  combat.ps1  combat.sh  fmt.ps1  fmt.sh  lint.ps1  lint.sh  pad-tables.ps1  pad-tables.sh  push.ps1  push.sh  run.ps1  run.sh  sample.ps1  sample.sh  sandbox.ps1  sandbox.sh  test.ps1  test.sh  verify.ps1  verify.sh
(+256 files in other folders)
