[workspace]
resolver = "3"
members = [
    "crates/contract",
    "crates/engine",
    "crates/mdtable",
    "crates/cardtable-model",
    "crates/cardtable-combat",
    "crates/cardtable",
    "crates/tabletop",
    "crates/deckbound",
    "crates/boardgame",
    "crates/deckbound-sample",
    "tools/combat-lab",
    "crates/gatcg",
    "crates/deckbound-cardtable",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Bevy's `default` feature set is [2d, 3d, ui, audio]; we drop `audio` because
# nothing uses it yet and cpal's wasm backend was panicking on startup (the
# AudioContext + `time not implemented` errors on the GitHub Pages build).
bevy = { version = "0.19.0", default-features = false, features = ["2d", "3d", "ui"] }
contract = { path = "crates/contract" }
engine = { path = "crates/engine" }
mdtable = { path = "crates/mdtable" }
cardtable-model = { path = "crates/cardtable-model" }
cardtable-combat = { path = "crates/cardtable-combat" }
cardtable = { path = "crates/cardtable" }
deckbound-cardtable = { path = "crates/deckbound-cardtable" }
tabletop = { path = "crates/tabletop" }
deckbound = { path = "crates/deckbound" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
# Blocking HTTP client for the `gatcg` reference-data downloader example. Kept
# out of the game crates; only the tooling crate depends on it.
ureq = "2"
# Wall-clock time that works on wasm too (std::time::SystemTime::now() panics on
# wasm32-unknown-unknown with "time not implemented").
web-time = "1"

# Enable fast compiles for development (Bevy recommendation).
# Disable when profiling or benchmarking.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
