[package]
name = "boardgame"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boardgame"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
tabletop = { workspace = true }
deckbound = { workspace = true }
cardtable = { workspace = true, optional = true }

[features]
# Swap the default `tabletop` renderer for the experimental card-table renderer:
#   cargo run -p boardgame --features cardtable
cardtable = ["dep:cardtable"]
