[package]
name = "boardgame"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boardgame"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
# The card-table renderer with its **game adapter** (the `game` feature's `GamePlugin` binds a
# `contract::Game`: it builds the table from the game's view and drains clicks + pairing drops into
# `Game::apply`).
cardtable = { workspace = true, features = ["game"] }
# The game itself: deckbound authored as a card-table `Game` (the view emitter). Provisional crate name.
deckbound-cardtable = { workspace = true }

# NOTE: persistence (the RON save + Start Over) was dropped when routing through the emitter — the game
# STATE is now the source of truth (the Tableau is derived each frame), so a save must persist the
# Action stream, not the table. Reworking that is a follow-on (reunification plan P2.4).
