[package]
name = "boardgame"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boardgame"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
cardtable = { workspace = true }
cardtable-model = { workspace = true }
# The combat bridge: resolves an encounter (deckbound's resolver) and folds the result back onto the
# table. This binary is where the game wires into the product; the renderer stays game-agnostic.
cardtable-combat = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }

# Native persistence: write the RON save to the OS data directory.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "5"

# Web persistence: the RON save lives in the browser's localStorage.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
