[package]
name = "cardtable-combat"
version.workspace = true
edition.workspace = true

[dependencies]
# The pure card-table model this bridge reads a location's heroes/foes from and writes consequences to.
cardtable-model = { workspace = true }
# The battle-tested combat resolver this bridge reuses (headless `winnable` + actor building). This is
# the ONE place the product reaches into the reference game — the model and renderer stay deckbound-free.
deckbound = { workspace = true }

[dev-dependencies]
# Tests only: the game's `sample_table` (moved game-side in P3c) builds the tables these bridge tests run on.
deckbound-cardtable = { workspace = true }
