[package]
name = "cardtable"
version.workspace = true
edition.workspace = true

[dependencies]
contract = { workspace = true }
cardtable-model = { workspace = true }
cardtable-combat = { workspace = true }
bevy = { workspace = true }
web-time = { workspace = true }

[features]
# The game adapter (GamePlugin): binds a `contract::Game` to the renderer core. Off by default so the
# core (and feature prototypes / examples) need no game.
game = []
