[package]
name = "characterization"
version.workspace = true
edition.workspace = true

# The behavior witness for the cardtable<->deckbound reunification pass
# (needs-merge/cardtable-deckbound-reunification-plan.md). Golden-master tests that
# pin CURRENT behavior at the pure-state surfaces (Tableau RON, combat outcomes) so a
# long behavior-preserving refactor can verify "same behavior in -> same behavior out"
# without a GPU in the loop. Kept OUT of the CI gate on purpose: it is a local
# regression witness that deliberately depends on crates the refactor will churn.
#
# Bless (regenerate) the goldens intentionally with `BLESS=1 cargo test -p characterization`;
# without BLESS the tests compare against the committed goldens and fail on any drift.

[dependencies]

[dev-dependencies]
cardtable-model = { workspace = true }
cardtable-combat = { workspace = true }
deckbound-cardtable = { workspace = true }
contract = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
