# PROVISIONAL NAME (names are flexible per the reorg plan; В§16.3 target: `deckbound-board`). Deckbound
# as a card-table **game** вЂ” it implements `cardtable_model::BoardGame` over the persistent physical board.
[package]
name = "deckbound-board"
version.workspace = true
edition.workspace = true

[dependencies]
# The generic card-table model: the physical `Board`/`Tableau` + the `BoardGame` seam this crate implements.
cardtable-model = { workspace = true }
# Shared CONTENT only (not the sample game): the card `catalog`, the V/O/R `rank::Intention`, and the
# sub-phase `schedule::SCHEDULE`/`SUB_PHASE_NAMES` (rankГ—phase catch legality). v2's cost economy вЂ” the tempo/
# finesse bids and the three mini-phases вЂ” is implemented FRESH in this crate's `combat` module. The product
# depends on this stable leaf, never on the `deckbound` sample crate.
deckbound-content = { workspace = true }

[dev-dependencies]
# The fixtures' tests round-trip the tableau through RON (the persistence format).
ron = { workspace = true }
