# PROVISIONAL NAME (names are flexible per the reorg plan; §16.3 target: `deckbound-board`). Deckbound
# as a card-table **game** — it implements `cardtable_model::BoardGame` over the persistent physical board.
[package]
name = "deckbound-board"
version.workspace = true
edition.workspace = true

[dependencies]
# The generic card-table model: the physical `Board`/`Tableau` + the `BoardGame` seam this crate implements.
cardtable-model = { workspace = true }
# Shared CONTENT only (not the sample game): the card `catalog`, the V/O/R `rank::Intention`, and the
# sub-phase `schedule::SCHEDULE`/`SUB_PHASE_NAMES` (rank×phase catch legality). v2's cost economy — the tempo/
# finesse bids and the three mini-phases — is implemented FRESH in this crate's `combat` module. The product
# depends on this stable leaf, never on the `deckbound` sample crate.
deckbound-content = { workspace = true }
# Markdown table padding - so the generated reference doc is emitted already in the repo's padded table
# style, and the tree-wide `pad_tables` pass never fights the byte-exact golden test on it.
mdtable = { workspace = true }
# The pure, dep-free game rules (the regions combat as a `Game`). The probes drive this now; the local
# `regions` copy is retired.
rules = { workspace = true }

[dev-dependencies]
# The fixtures' tests round-trip the tableau through RON (the persistence format).
ron = { workspace = true }
