# PROVISIONAL NAME (names are flexible per the reorg plan; §16.3 target: `deckbound-board`). Deckbound
# as a card-table **game** — it implements `cardtable_model::BoardGame` over the persistent physical board.
[package]
name = "deckbound-cardtable"
version.workspace = true
edition.workspace = true

[dependencies]
# The generic card-table model: the physical `Board`/`Tableau` + the `BoardGame` seam this crate implements.
cardtable-model = { workspace = true }
