# PROVISIONAL NAME (names are flexible per the reorg plan; §16.3 target: `deckbound-board`). Deckbound
# as a card-table **game** — it implements `cardtable_model::BoardGame` over the persistent physical board.
[package]
name = "deckbound-cardtable"
version.workspace = true
edition.workspace = true

[dependencies]
# The generic card-table model: the physical `Board`/`Tableau` + the `BoardGame` seam this crate implements.
cardtable-model = { workspace = true }
# NOTE: v2 combat (stretch A, stage 1) re-adds `deckbound = { workspace = true }` for its PRIMITIVES only —
# the Might->toughness->flip health model (`stats::{Health, Defense}`), the sub-phase `combat::SCHEDULE` /
# `SUB_PHASE_NAMES`, and ranks (`actor::Intention`). v2's cost economy is implemented FRESH in a new
# `combat` module here, NOT by reworking deckbound's resolver (build-decision B).
