# PROVISIONAL NAME (names are flexible per the reorg plan; В§16.3 target: `deckbound-board`). Deckbound
# as a card-table **game** вЂ” it implements `cardtable_model::BoardGame` over the persistent physical board.
[package]
name = "deckbound-cardtable"
version.workspace = true
edition.workspace = true

[dependencies]
# The generic card-table model: the physical `Board`/`Tableau` + the `BoardGame` seam this crate implements.
cardtable-model = { workspace = true }
# deckbound PRIMITIVES only (v2 combat, build-decision B): ranks (`actor::Intention` = V/O/R) and the
# sub-phase `combat::SCHEDULE`/`SUB_PHASE_NAMES` (rankГ—phase catch legality). v2's cost economy вЂ” the tempo/
# finesse bids and the three mini-phases вЂ” is implemented FRESH in this crate's `combat` module, NOT by
# reworking deckbound's resolver. (Mightв†’health is a small inline toughness-accumulate model, its semantics.)
deckbound = { workspace = true }
