[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
# Rng serializes (its u64 state) so a combat State round-trips through RON — see deckbound's
# state-serialization. (The Game/TableView contract moved to the `contract` crate; this crate is helpers.)
serde = { workspace = true }
